--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div id="areaPrincipal">
             <div id="postagem">
-                <h2>Título da postagem</h2>
+                <h2>Título da postagemn</h2>
                 <span class="dataPostagem">Postado em 15/09/2022</span>
                 <img class="imagemPostagem" src="imagens/imagem1.png">
                 <p>
