--- a/projeto_emyjoias/index.html
+++ b/projeto_emyjoias/index.html
@@ -8,7 +8,6 @@
     <title>Emy Joias</title>
     <link rel="icon" href="imagens/favicon.png">
 
-    <!-- Bootstrap -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="estilo.css" rel="stylesheet">
 
@@ -23,7 +22,7 @@
         <!-- header -->
         <div class="navbar-header">
           
-          <!-- botao toggle -->
+          <!-- toggle button -->
           <button type="button" class="navbar-toggle collapsed"
                   data-toggle="collapse" data-target="#barra-navegacao">
             <span class="sr-only">alternar navegação</span>
@@ -145,6 +144,8 @@
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="bootstrap/js/bootstrap.min.js"></script>
+
+    <script language="javascript" src="emyjs.js"></script>
 
     <script language="javascript" src="emyjs.js"></script>
   </body>
