--- a/projeto_emyjoias/feminino.html
+++ b/projeto_emyjoias/feminino.html
@@ -6,18 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Emy Joias</title>
-    <link rel="icon" href="imagens/favicon.png">
-
-    <!-- Bootstrap -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="estilo.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -29,7 +20,7 @@
         <!-- header -->
         <div class="navbar-header">
           
-          <!-- botao toggle -->
+          <!-- toggle button-->
           <button type="button" class="navbar-toggle collapsed"
                   data-toggle="collapse" data-target="#barra-navegacao">
             <span class="sr-only">alternar navegação</span>
