--- a/projeto_emyjoias/folheados.html
+++ b/projeto_emyjoias/folheados.html
@@ -144,31 +144,17 @@
           </div>
 
           <div class="col-md-2">
-            <h4>company</h4>
+          </div>
+
+          <div class="col-md-2">
+            <h4>contate-nos</h4>
             <ul class="nav">
-              <li><a href="">Sobre</a></li>
-              <li><a href="">Empregos</a></li>
-              <li><a href="">Imprensa</a></li>
-              <li><a href="">Novidades</a></li>
+              <li id="email"><a href="" onclick="start()">Email</a></li>
+              <li id="telefone"><a href="" onclick="start()">Telefone</a></li>
             </ul>
           </div>
 
           <div class="col-md-2">
-            <h4>comunidades</h4>
-            <ul class="nav">
-              <li><a href="">Artistas</a></li>
-              <li><a href="">Desenvolvedores</a></li>
-              <li><a href="">Marcas</a></li>
-            </ul>
-          </div>
-
-          <div class="col-md-2">
-            <h4>links uteis</h4>
-            <ul class="nav">
-              <li><a href="">Ajuda</a></li>
-              <li><a href="">Presentes</a></li>
-              <li><a href="">Player da web</a></li>
-            </ul>
           </div>
 
           <div class="col-md-4">
@@ -182,10 +168,13 @@
       </div>
     </footer>
 
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="bootstrap/js/bootstrap.min.js"></script>
+
+    <script language="javascript" src="emyjs.js"></script>
   </body>
 </html>
