--- a/projeto_emyjoias/sobre.html
+++ b/projeto_emyjoias/sobre.html
@@ -8,16 +8,8 @@
     <title>Emy Joias</title>
     <link rel="icon" href="imagens/favicon.png">
 
-    <!-- Bootstrap -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="estilo.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -29,7 +21,7 @@
         <!-- header -->
         <div class="navbar-header">
           
-          <!-- botao toggle -->
+          <!-- toggle button-->
           <button type="button" class="navbar-toggle collapsed"
                   data-toggle="collapse" data-target="#barra-navegacao">
             <span class="sr-only">alternar navegação</span>
@@ -113,31 +105,17 @@
           </div>
 
           <div class="col-md-2">
-            <h4>company</h4>
+          </div>
+
+          <div class="col-md-2">
+            <h4>contate-nos</h4>
             <ul class="nav">
-              <li><a href="">Sobre</a></li>
-              <li><a href="">Empregos</a></li>
-              <li><a href="">Imprensa</a></li>
-              <li><a href="">Novidades</a></li>
+              <li id="email"><a href="" onclick="start()">Email</a></li>
+              <li id="telefone"><a href="" onclick="start()">Telefone</a></li>
             </ul>
           </div>
 
           <div class="col-md-2">
-            <h4>comunidades</h4>
-            <ul class="nav">
-              <li><a href="">Artistas</a></li>
-              <li><a href="">Desenvolvedores</a></li>
-              <li><a href="">Marcas</a></li>
-            </ul>
-          </div>
-
-          <div class="col-md-2">
-            <h4>links uteis</h4>
-            <ul class="nav">
-              <li><a href="">Ajuda</a></li>
-              <li><a href="">Presentes</a></li>
-              <li><a href="">Player da web</a></li>
-            </ul>
           </div>
 
           <div class="col-md-4">
@@ -156,5 +134,7 @@
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="bootstrap/js/bootstrap.min.js"></script>
+
+    <script language="javascript" src="emyjs.js"></script>
   </body>
 </html>
